--- a/src/styles/_mainPost.scss
+++ b/src/styles/_mainPost.scss
@@ -63,6 +63,18 @@
 			}
 		}
 	}
+
+	// .activ {
+	// 	color: $refHoverColor;
+
+		// &:after {
+		// 	content: '';
+		// 	display: block;
+		// 	height: 2px;
+		// 	width: 100%;
+		// 	background-color: $orange;
+		// }
+	// }
 }
 
 .posts {
