--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,4 @@
 .upperHeader {
-	font-family: 'Merriweather', serif;
-	font-size: 14px;
-	// background-color: $background;
 
 	&:after {
 		content: '';
@@ -25,7 +22,7 @@
 }
 
 .btn:hover {
-	color: $orange;
+	color: $primary;
 }
 
 .icon-search:before {
@@ -33,7 +30,7 @@
 }
 
 .icon {
-	// padding: 0 70px;
+	padding: 0 50px;
 
 	@media (min-width: 576px) {
 		padding: 0 5px;
@@ -54,12 +51,13 @@
 		}
 	
 	.activ {
+		color: $primary;
 	}
 
 	a {
 		text-decoration: none;
 		color: $body-color;
-			position: relative;
+		position: relative;
 
 		&:after {
 			content: '';
@@ -74,7 +72,7 @@
 		}
 
 		&:hover {
-			color: $orange;
+			color: $primary;
 		}
 	}
 
@@ -84,7 +82,7 @@
 
 	.icon-twitter:before {
   	content: "\ea96";
-	color: $orange;
+	color: $primary;
 	}
 
 	.icon-instagram:before {
@@ -100,16 +98,48 @@
 	}
 }
 
-.bottomHeader {
-	padding-top: 55px;
-	font-family: 'Merriweather', serif;
-	font-size: 14px;
+.bottom-header {
+	padding-top: 10px;
+	// font-family: 'Merriweather', serif;
+	// font-size: 14px;
+
+	@media (min-width: 922px) {
+		padding-top: 55px;
+	}
+
+	.logo {
+		padding: 5px;
+
+		a {
+			width: 100%;
+		}
+	}
 }
 
-.navReferences {
-	background-color: $orange;
-	height: 100%;
-	// width: max-content;
+.nav-references {
+	background-color: $primary;
+	// height: 100%;
+}
+
+.nav-item {
+
+	.active {
+
+		color: $white;
+		opacity: 0.5;
+
+		&:after {
+			content: '';
+			display: block;
+			width: 50%;
+			height: 3px;
+			background-color: $white;
+			position: absolute;
+			top: 100%;
+			left: 25%;
+			transform: translate(0, -50%);
+		}	
+	}
 }
 
 .nav-link {
@@ -119,17 +149,18 @@
 
 	&:hover {
 		color: $white;
+		opacity: 0.5;
 
 		&:after {
 			content: '';
 			display: block;
 			width: 50%;
-			height: 2px;
+			height: 3px;
 			background-color: $white;
 			position: absolute;
 			top: 100%;
 			left: 25%;
-			transform: translate(0, 50%);
+			transform: translate(0, -50%);
 		}
 	}
 }
