--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,74 +1,4 @@
-.footer {
-	padding-top: 100px;
-
-	.icon {
-		// padding: 0 70px;
-	
-		@media (min-width: 576px) {
-			padding: 0 5px;
-			}
-	
-		.list-group {
-			display: flex;
-			justify-content: center;
-	
-			.social {
-				padding: 0 5px;
-				align-items: center;
-			}
-		}
-	
-		ul {
-			margin-top: 1rem;
-			}
-		
-		.activ {
-		}
-	
-		a {
-			text-decoration: none;
-			color: $body-color;
-				position: relative;
-	
-			&:after {
-				content: '';
-				display: block;
-				margin-left: 10px;
-				height: 100%;
-				width: 1px;
-				background-color: $body-color;
-				position: absolute;
-				top: 0px;
-				left: 10px;
-			}
-	
-			&:hover {
-				color: $primary;
-			}
-		}
-	
-		.icon-facebook2:before {
-		content: "\ea91";
-		}
-	
-		.icon-twitter:before {
-	  	content: "\ea96";
-		color: $primary;
-		}
-	
-		.icon-instagram:before {
-	  	content: "\ea92";
-		}
-	
-		.icon-pinterest:before {
-	  	content: "\ead1";
-		}
-	
-		.icon-dribbble:before {
-	  		content: "\e900";
-		}
-	}
-}
+@import "social-box";
 
 .copyright {
 	text-align: center;
