--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,4 +1,24 @@
-.upperHeader {
+@import "social-box";
+
+.header {
+	margin-bottom: 20px;
+
+	@media (min-width: 768px) {
+		margin-bottom: 40px;
+	}
+}
+
+.header-up {
+	margin-bottom: 10px;
+
+	@media (min-width: 922px) {
+		margin-bottom: 55px;
+	}
+
+
+	span {
+		padding: 5px 0;
+	}
 
 	&:after {
 		content: '';
@@ -6,9 +26,12 @@
 		width: 100%;
 		height: 1px;
 		background-color: $body-color;
-		box-shadow: 0 0 3px;
+		box-shadow: 3px 0 3px;
 	}
+}
 
+.form-control{
+	visibility: hidden;
 }
 
 .btn-outline-success {
@@ -29,84 +52,8 @@
   content: "\e986";
 }
 
-.icon {
-	padding: 0 50px;
-
-	@media (min-width: 576px) {
-		padding: 0 5px;
-		}
-
-	.list-group {
-		display: flex;
-		justify-content: space-between;
-
-		.flex-fill {
-			padding: 0 5px;
-			align-items: center;
-		}
-	}
-
-	ul {
-		margin-top: 1rem;
-		}
+.header-bottom {
 	
-	.activ {
-		color: $primary;
-	}
-
-	a {
-		text-decoration: none;
-		color: $body-color;
-		position: relative;
-
-		&:after {
-			content: '';
-			display: block;
-			margin-left: 10px;
-			height: 100%;
-			width: 1px;
-			background-color: $body-color;
-			position: absolute;
-			top: 0px;
-			left: 10px;
-		}
-
-		&:hover {
-			color: $primary;
-		}
-	}
-
-	.icon-facebook2:before {
-	content: "\ea91";
-	}
-
-	.icon-twitter:before {
-  	content: "\ea96";
-	color: $primary;
-	}
-
-	.icon-instagram:before {
-  	content: "\ea92";
-	}
-
-	.icon-pinterest:before {
-  	content: "\ead1";
-	}
-
-	.icon-dribbble:before {
-  		content: "\e900";
-	}
-}
-
-.bottom-header {
-	padding-top: 10px;
-	// font-family: 'Merriweather', serif;
-	// font-size: 14px;
-
-	@media (min-width: 922px) {
-		padding-top: 55px;
-	}
-
 	.logo {
 		padding: 5px;
 
