--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -30,9 +30,9 @@
 	}
 }
 
-.form-control{
-	visibility: hidden;
-}
+// .form-control{
+// 	visibility: hidden;
+// }
 
 .btn-outline-success {
 	border-color: $body-color;
